# fan_controller

./: CMakeLists.txt  Controller.cpp  Controller.hpp  Fan.cpp  Fan.hpp  LcdDisplay.cpp  Thermometer.cpp  Thermometer.hpp  main.cpp
SlowThermometer/: SlowThermometer.cpp  SlowThermometer.hpp
tests/: ControllerTests.cpp  FanTests.cpp
tests/mocks/: mocks.hpp
